# image_frame_process_worker

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: OPENCVConfig.cmake
src/: AMQPBComm.cpp  AMQPBComm.hpp  CMakeLists.txt  HeartOfAsiaImpl.cpp  HeartOfAsiaImpl.hpp  const.hpp  hoa_frame.pb.cc  hoa_frame.pb.h  hoa_frame.proto  hoa_worker.cpp  orig_main.cpp
